# polynomials

./: .clang-format  CMakeLists.txt  Makefile  README.md  example.cpp  polynomial.hpp  z_module.hpp
debug/: z_module_debug.gdb
examples/: CMakeLists.txt  example.cpp
include/: aux.hpp  detail.hpp  fgs_concepts.hpp  polynomial.hpp  polynomial_io.hpp  z_module.hpp  z_module_prime.hpp
source/: z_module.cpp  z_module_arithmetics.cpp  z_module_comparisons.cpp  z_module_prime.cpp
tests/: CMakeLists.txt  unit_tests.cpp  validation_tests.cpp  z_module_test.cpp
